Fix broken styles on non-network tabs in popup mode

--- a/ui/app/pages/settings/index.scss
+++ b/ui/app/pages/settings/index.scss
@@ -65,8 +65,6 @@
       background-position: center;
       margin-right: 16px;
       cursor: pointer;
-      position: absolute;
-      margin-left: 10px;
     }
   }
 
@@ -109,10 +107,6 @@
   &__body {
     padding: 12px 24px;
     height: 100%;
-
-    @media screen and (max-width: 575px) {
-      padding: 0;
-    }
   }
 
   &__content-row {
